--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "bugfix",
   "version": "0.1.0",
+  "homepage": "https://md-abdullah-fardus.github.io/bugfix",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
